@@ -9,6 +9,8 @@ git-annex (6.20160230) UNRELEASED; urgency=medium
   * Added dependencies on haskell mountpoints and disk-free-space
     libraries, removing FFI code from git-annex.
   * dropkey: Add --batch and --json.
+  * Fix OSX dmg to include libraries needed by bundled gpg,
+    lost in last release.
 
  -- Joey Hess <id@joeyh.name>  Mon, 29 Feb 2016 13:00:30 -0400
 
